--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -616,3 +616,16 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   letter-spacing: 0.5px;
   margin-top: 20px;
 }
+
+.travelers-experience {
+  font-size: 1.1rem;
+}
+
+.travelers-experience h2 {
+  font-size: 2.6rem; /* Adjust the heading size */
+}
+
+.travelers-experience p {
+  font-size: 1.2rem; /* Adjust paragraph size */
+}
+
