--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -629,3 +629,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-size: 1.2rem; /* Adjust paragraph size */
 }
 
+/************ Banner Css ************/
+
+
+
